# COURS

./: .gitignore  Prof_Assistants.md  README.md  Tutorat.md  Tutorat_Appui.md
2_Demos/01_Intro/: 01-01-01_HelloWorld.cpp
2_Demos/02_Elements_Bases/: 02-02-01_char.cpp  02-02-02_bool.cpp  02-02-03_string_concat.cpp  02-03-01_spaceship.cpp  02-04-01_pointeurs.cpp  02-04-02_chaine_vs_string.cpp  CMakeLists.txt
2_Demos/03_Structures_Controle/: 03-02-01_boucle_saisie.cpp
2_Demos/04_Fonctions/: 04-2-01_passage_parametre.cpp  04-2a-01_static_srand.cpp  04-2a-02_random.cpp  04_constexpr.cpp  04_nbreJoursMois.cpp  04_pointeurs.cpp  04_random.cpp  04_static_srand.cpp  CMakeLists.txt
2_Demos/05_Flux/: 03_boucle_saisie.cpp  06_stringstream.cpp
2_Demos/06_Types_Arithmetiques/: 02_climits.cpp  02_iomanip.cpp  02_numerics_limits_reels.cpp  02_numerics_limits_types.cpp  readme.md
2_Demos/07_Structure_Enum/: 01a_1_personne.cpp  03_enum_switch.cpp  2023-10-02.cpp
2_Demos/08_string/: 03_chaine_vs_string.cpp  06_chaineC.cpp  06_string-find_first_of.cpp  06_string.cpp
2_Demos/09_vector/: 05_boucle_iterator.cpp  05_enum_class.cpp  05_init_vector_array.cpp  05_matrice_somme_diag.cpp  05_parcourir_ptrFct.cpp  05_suppression.cpp  05_tab_vector_array.cpp  05_tableau_C.cpp  05_tri.cpp  05_vector_iterators.cpp  05_vector_size_vs_capacity.cpp
2_Demos/09_vector/05_BubbleSort_SDL/CLion/: CMakeLists.txt
2_Demos/09_vector/05_Sort_Counter/: 05_Sort_Counter.cpp  CMakeLists.txt  Data.hpp  Makefile  Tris.hpp
2_Demos/10_Surcharge_Genericite/: 08_Trier_Fct_Sort.cpp  08_classe_gen_et_non-gen.cpp  08_foncteur_generique.cpp  08_parcours_fonction_G.cpp  08_parcours_fonction_ptr.cpp  08_specialisation.cpp  08_specialisation_fonction.cpp  08_specialisation_fonction_ex_8_4.cpp  08_vector_iterators_G.cpp
2_Demos/11_Classes/: 07_Trace_avec_swap_move.cpp  07_Trace_sans_swap_move.cpp  07_constructor_defaut.cpp  07_constructor_explicit.cpp  07_constructor_simple.cpp  07_foncteur.cpp  07_operator.cpp  07_operator_avec_3_voies.cpp  07_valeur_defaut.cpp  operateur_ETD.cpp
2_Demos/11_Classes/07_amities_fct_independante_amie_de_plusieurs_classes/: CMakeLists.txt  Makefile  c1.cpp  c1.hpp  c2.cpp  c2.hpp  main.cpp
2_Demos/11_Classes/07_amities_fct_operateurs_independantes_amies/: CMakeLists.txt  Makefile  main.cpp  vecteur.cpp  vecteur.hpp
2_Demos/13_Classes_Generiques/: 08_specialisation_classe.cpp  08_specialisation_classe_ou_methode.cpp
2_Demos/14_Gestion_Erreurs/: 09_depreciated_C03.cpp  09_exception_derivee.cpp  09_exception_std.cpp  09_fonction_try-bloc.cpp  09_heritage.cpp  09_terminaison.cpp  09_try-catch.cpp
3_Complements/: readme.md
3_Complements/IDE_CLion/: CMakeLists.txt  entete_fichier.h
3_Complements/SDL2/: readme.md
4_Laboratoires/02_Wallis_pseudo/: readme.md
5_Classe_PRG1-B/: readme.md
5_Classe_PRG1-B/Demos_PRG1-B/: 2024-09-19  2024-09-19.cpp  2024-09-23  2024-09-23.cpp  2024-09-24.cpp  2024-09-26.cpp  2024-09-30.cpp  CMakeLists.txt  readme.md
5_Classe_PRG1-B/Demos_PRG1_B/: CMakeLists.txt
5_Classe_PRG1-E/: readme.md
5_Classe_PRG1-E/Demos_PRG1-E/: 2024-09-19  2024-09-19.cpp  2024-09-20.cpp  2024-09-23.cpp  2024-09-24.cpp  2024-09-27.cpp  CMakeLists.txt  readme.md
5_Classe_PRG1-E/Demos_PRG1_E/: 2024-09-23.cpp  CMakeLists.txt
Classe_PRG1-B/: readme.md
Classe_PRG1-B/Demos_PRG1-B/: 2024-09-27.cpp  2024-09-30.cpp  2024-10-01.cpp  2024-10-03.cpp  2024-10-07.cpp  2024-10-08.cpp  2024-10-10.cpp  2024-10-14.cpp  2024-10-14_tuto.cpp  2024-10-15.cpp  2024-10-17.cpp  2024-10-28.cpp  2024-10-31.cpp  2024-11-04.cpp  2024-11-05.cpp  2024-11-07.cpp  2024-11-11.cpp  2024-11-18.cpp  2024-11-19.cpp  2024-11-21.cpp  2024-11-25.cpp  2024-11-25_body.cpp  2024-11-25_header.h  2024-12-03.cpp  2024-12-05.cpp  2024-12-10.cpp  2024-12-12.cpp  2025-01-09.cpp  2025-01-13  2025-01-13.cpp  2025-01-14.cpp  2025-01-20.cpp  2025-01-21.cpp  CMakeLists.txt
Classe_PRG1-B/Rendus_Labo/: readme.md
Classe_PRG1-E/: readme.md
Classe_PRG1-E/Demos_PRG1-E/: 2024-09-30.cpp  2024-10-01.cpp  2024-10-03.cpp  2024-10-08.cpp  2024-10-10.cpp  2024-10-14.cpp  2024-10-15.cpp  2024-10-17.cpp  2024-10-28.cpp  2024-10-29.cpp  2024-10-31.cpp  2024-11-04.cpp  2024-11-07.cpp  2024-11-11.cpp  2024-11-18.cpp  2024-11-19.cpp  2024-11-26.cpp  2024-11-26_fichier.cpp  2024-11-26_fichier.hpp  2024-12-02.cpp  2024-12-03.cpp  2024-12-05.cpp  2024-12-10.cpp  2024-12-12.cpp  2024-12-20.cpp  2025-01-09.cpp  2025-01-13.cpp  2025-01-16.cpp  (+2 more)
Complements/: readme.md  regles_PRG1.md  regles_cours.md  string_view.md
Complements/SDL2/03_Moving_Point_SDL/CLion - Windows/: CMakeLists.txt  CMakeLists_old.txt
Complements/SDL2/03_Moving_Point_SDL/CLion MacOS/: 03_Moving_Point_SDL_MacOS.cpp  CMakeLists.txt
Laboratoires/: Corrections Labo - template.xlsx  readme.md
(+104 files in other folders)
